test/kyverno-chainsaw/resources/hpa/hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: testkube-cloud-api
spec:
  (maxReplicas < `10`): true
  maxReplicas: 10
  minReplicas: 3
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: testkube-cloud-api
